2011-06-03  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/generalize.h (AO_HAVE_or_full): Add missing
	definition.
	* src/atomic_ops/sysdeps/ordered_except_wr.h (AO_HAVE_nop_write):
	Fix macro name.
	* src/atomic_ops/sysdeps/read_ordered.h (AO_HAVE_nop_read): Ditto.
	* src/atomic_ops/sysdeps/gcc/powerpc.h (AO_HAVE_store_release):
	Ditto.

2011-06-03  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/generalize-small.template
	(AO_HAVE_XSIZE_fetch_and_add_full): Add missing definition.
	* src/atomic_ops/generalize-small.template: Reformat code.
	* src/atomic_ops/generalize-small.h: Regenerate.

2011-06-03  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/aligned_atomic_load_store.h: Remove
	blank line between AO_func and AO_HAVE_func definitions.
	* src/atomic_ops/sysdeps/atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/char_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/generic_pthread.h: Ditto.
	* src/atomic_ops/sysdeps/int_aligned_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/int_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/ordered.h: Ditto.
	* src/atomic_ops/sysdeps/ordered_except_wr.h: Ditto.
	* src/atomic_ops/sysdeps/read_ordered.h: Ditto.
	* src/atomic_ops/sysdeps/short_aligned_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/short_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/alpha.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/arm.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/cris.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/hppa.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/ia64.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/m68k.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/mips.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/powerpc.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/s390.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/sparc.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/x86.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/x86_64.h: Ditto.
	* src/atomic_ops/sysdeps/hpc/hppa.h: Ditto.
	* src/atomic_ops/sysdeps/hpc/ia64.h: Ditto.