@@ -1,5 +1,11 @@
 2011-06-03  Ivan Maidanski  <ivmai@mail.ru>
 
+	* tests/test_malloc.c (run_one_test): Test AO_malloc() result
+	(if out of memory then print the message and abort).
+	* tests/test_stack.c (add_elements): Ditto.
+
+2011-06-03  Ivan Maidanski  <ivmai@mail.ru>
+
 	* src/atomic_ops/generalize.h (AO_HAVE_or_full): Add missing
 	definition.
 	* src/atomic_ops/sysdeps/ordered_except_wr.h (AO_HAVE_nop_write):
